# efr32xg1-pac

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs
src/acmp0/: mod.rs
src/acmp0/aportconflict/: mod.rs
src/acmp0/ctrl/: mod.rs
src/acmp0/ien/: mod.rs
src/acmp0/ifc/: mod.rs
src/acmp0/inputsel/: mod.rs
src/acmp0/status/: mod.rs
src/acmp1/aportreq/: mod.rs
src/acmp1/hysteresis0/: mod.rs
src/acmp1/hysteresis1/: mod.rs
src/acmp1/if_/: mod.rs
src/acmp1/ifs/: mod.rs
src/acmp1/routeloc0/: mod.rs
src/acmp1/routepen/: mod.rs
src/adc0/: mod.rs
src/adc0/aportconflict/: mod.rs
src/adc0/aportmasterdis/: mod.rs
src/adc0/aportreq/: mod.rs
src/adc0/biasprog/: mod.rs
src/adc0/cal/: mod.rs
src/adc0/cmd/: mod.rs
src/adc0/cmpthr/: mod.rs
src/adc0/ctrl/: mod.rs
src/adc0/ien/: mod.rs
src/adc0/if_/: mod.rs
src/adc0/ifc/: mod.rs
src/adc0/ifs/: mod.rs
src/adc0/scanctrl/: mod.rs
src/adc0/scanctrlx/: mod.rs
src/adc0/scandatax/: mod.rs
src/adc0/scandataxp/: mod.rs
src/adc0/scanfifoclear/: mod.rs
src/adc0/scanfifocount/: mod.rs
src/adc0/scaninputsel/: mod.rs
src/adc0/scanmask/: mod.rs
src/adc0/scannegsel/: mod.rs
src/adc0/singlectrl/: mod.rs
src/adc0/singlectrlx/: mod.rs
src/adc0/singlefifoclear/: mod.rs
src/adc0/singlefifocount/: mod.rs
src/adc0/status/: mod.rs
src/cmu/: mod.rs
src/cmu/adcctrl/: mod.rs
src/cmu/auxhfrcoctrl/: mod.rs
src/cmu/calctrl/: mod.rs
src/cmu/cmd/: mod.rs
src/cmu/ctrl/: mod.rs
src/cmu/dbgclksel/: mod.rs
src/cryotimer/: mod.rs
src/crypto/: mod.rs
src/emu/: mod.rs
src/fpueh/: mod.rs
src/gpcrc/: mod.rs
src/gpio/: mod.rs
src/i2c0/: mod.rs
src/idac0/: mod.rs
src/ldma/: mod.rs
src/letimer0/: mod.rs
src/leuart0/: mod.rs
src/msc/: mod.rs
src/pcnt0/: mod.rs
src/prs/: mod.rs
src/rmu/: mod.rs
src/rtcc/: mod.rs
src/timer1/: mod.rs
src/usart1/: mod.rs
src/wdog0/: mod.rs
(+449 files in other folders)
